Added a kernel driver and an example for it

--- a/Driver.Example/Driver.Example.csproj
+++ b/Driver.Example/Driver.Example.csproj
@@ -1,74 +1,76 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Obfuscar.2.2.13\build\obfuscar.props" Condition="Exists('..\packages\Obfuscar.2.2.13\build\obfuscar.props')" />
+  <Import Project="..\packages\Costura.Fody.3.1.6\build\Costura.Fody.props" Condition="Exists('..\packages\Costura.Fody.3.1.6\build\Costura.Fody.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DA6808CC-0E9E-46A4-95BA-BCB7EFFCCE0E}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Driver</RootNamespace>
-    <AssemblyName>Driver</AssemblyName>
+    <ProjectGuid>{50AA19BF-C3F2-4495-8392-E565F2BDCE22}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Driver.Example</RootNamespace>
+    <AssemblyName>Driver.Example</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>Builds\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>1</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>Builds\Release\</OutputPath>
     <DefineConstants>TRACE;RELEASE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>0</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Costura, Version=3.1.6.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
+      <HintPath>..\packages\Costura.Fody.3.1.6\lib\net46\Costura.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.ServiceProcess" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\AccessMask.cs" />
-    <Compile Include="Enums\DriverLoad.cs" />
-    <Compile Include="Enums\NtStatus.cs" />
-    <Compile Include="Enums\Services\SCMAccess.cs" />
-    <Compile Include="Enums\Services\ServiceAccess.cs" />
-    <Compile Include="Enums\Services\ServiceError.cs" />
-    <Compile Include="Enums\Services\ServiceStart.cs" />
-    <Compile Include="Enums\Services\ServiceType.cs" />
-    <Compile Include="Log.cs" />
-    <Compile Include="Logic\DriverStatic.cs" />
-    <Compile Include="Logic\Driver.cs" />
-    <Compile Include="Logic\DriverConfig.cs" />
-    <Compile Include="Logic\Loaders\DseLoad.cs" />
-    <Compile Include="Logic\Loaders\Interfaces\IDriverLoad.cs" />
-    <Compile Include="Logic\Loaders\ServiceLoad.cs" />
-    <Compile Include="Logic\Loaders\TurlaLoad.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\DSEFix.cs" />
-    <Compile Include="Utilities\Native.cs" />
-    <Compile Include="Utilities\Service.cs" />
-    <Compile Include="Utilities\Turla.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Driver.nuspec" />
+    <ProjectReference Include="..\Driver\Driver.csproj">
+      <Project>{da6808cc-0e9e-46a4-95ba-bcb7effcce0e}</Project>
+      <Name>Driver</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.manifest" />
+    <None Include="obfuscar.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="obfuscar.xml">
+    <None Include="FodyWeavers.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Loaders\DriverLoader.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
@@ -79,7 +81,8 @@ DEL /S "$(TargetDir)*.pdb"
 DEL /S "$(TargetDir)*.ilk"
 DEL /S "$(TargetDir)*.lib"
 DEL /S "$(TargetDir)*.cer"
-DEL /S "$(TargetDir)*.exp"</PreBuildEvent>
+DEL /S "$(TargetDir)*.exp"
+DEL /S "$(TargetDir)*.sys"</PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PostBuildEvent>if "$(ConfigurationName)" == "Release" (
@@ -92,6 +95,7 @@ DEL /S "$(TargetDir)*.ilk"
 DEL /S "$(TargetDir)*.lib"
 DEL /S "$(TargetDir)*.cer"
 DEL /S "$(TargetDir)*.exp"
+DEL /S "$(TargetDir)*.sys"
 
 if "$(ConfigurationName)" == "Release" (
   DEL /S "$(TargetDir)Obfuscated\Mapping.txt"
@@ -100,13 +104,15 @@ if "$(ConfigurationName)" == "Release" (
   RMDIR /S /Q "$(TargetDir)Obfuscated\"
 )
 
-cd "$(TargetDir)"
-"nuget.exe" pack "$(ProjectPath)" -Prop Configuration=$(ConfigurationName)</PostBuildEvent>
+XCOPY /Y /C /E "$(SolutionDir)Driver.Kernel\$(OutDir)*" "$(TargetDir)"
+RENAME "$(TargetDir)Driver.Kernel.sys" "DriverExample.sys"</PostBuildEvent>
   </PropertyGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>Ce projet fait référence à des packages NuGet qui sont manquants sur cet ordinateur. Utilisez l'option de restauration des packages NuGet pour les télécharger. Pour plus d'informations, consultez http://go.microsoft.com/fwlink/?LinkID=322105. Le fichier manquant est : {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Obfuscar.2.2.13\build\obfuscar.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Obfuscar.2.2.13\build\obfuscar.props'))" />
+    <Error Condition="!Exists('..\packages\Costura.Fody.3.1.6\build\Costura.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Costura.Fody.3.1.6\build\Costura.Fody.props'))" />
+    <Error Condition="!Exists('..\packages\Fody.3.2.17\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.3.2.17\build\Fody.targets'))" />
   </Target>
+  <Import Project="..\packages\Fody.3.2.17\build\Fody.targets" Condition="Exists('..\packages\Fody.3.2.17\build\Fody.targets')" />
 </Project>
