--- a/Driver.Example/packages.config
+++ b/Driver.Example/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Costura.Fody" version="3.1.6" targetFramework="net472" />
   <package id="Fody" version="3.2.17" targetFramework="net472" developmentDependency="true" />
+  <package id="Obfuscar" version="2.2.13" targetFramework="net472" developmentDependency="true" />
 </packages>
