--- a/Driver.Kernel2/Driver.Kernel2.vcxproj
+++ b/Driver.Kernel2/Driver.Kernel2.vcxproj
@@ -19,16 +19,16 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{5A0A2783-A4D5-4FA5-9E0D-693040644D40}</ProjectGuid>
+    <ProjectGuid>{3B24CB5C-70B5-4BD0-B543-BE377DB412BE}</ProjectGuid>
     <TemplateGuid>{1bc93793-694f-48fe-9372-81e2b05556fd}</TemplateGuid>
     <TargetFrameworkVersion>
     </TargetFrameworkVersion>
     <MinimumVisualStudioVersion>12.0</MinimumVisualStudioVersion>
     <Configuration>Debug</Configuration>
     <Platform Condition="'$(Platform)' == ''">Win32</Platform>
-    <RootNamespace>TopKek</RootNamespace>
+    <RootNamespace>Driver_Kernel</RootNamespace>
     <WindowsTargetPlatformVersion>$(LatestTargetPlatformVersion)</WindowsTargetPlatformVersion>
-    <ProjectName>Driver.Kernel</ProjectName>
+    <ProjectName>Driver.Kernel2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
