--- a/Driver.Example/Driver.Example.csproj
+++ b/Driver.Example/Driver.Example.csproj
@@ -1,7 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Obfuscar.2.2.14\build\obfuscar.props" Condition="Exists('..\packages\Obfuscar.2.2.14\build\obfuscar.props')" />
-  <Import Project="..\packages\Costura.Fody.3.2.0\build\Costura.Fody.props" Condition="Exists('..\packages\Costura.Fody.3.2.0\build\Costura.Fody.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -44,13 +42,15 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Costura, Version=3.2.0.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
-      <HintPath>..\packages\Costura.Fody.3.2.0\lib\net46\Costura.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Handlers\Requests.cs" />
+    <Compile Include="Handlers\Structures\KernelBaseAddrRequest.cs" />
+    <Compile Include="Handlers\Structures\KernelReadRequest.cs" />
+    <Compile Include="Handlers\Structures\KernelVirtualQueryRequest.cs" />
+    <Compile Include="Handlers\Structures\KernelWriteRequest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -62,13 +62,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
-    <None Include="obfuscar.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="FodyWeavers.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Loaders\DriverLoader.exe">
@@ -86,11 +79,7 @@ DEL /S "$(TargetDir)*.exp"
 DEL /S "$(TargetDir)*.sys"</PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>if "$(ConfigurationName)" == "Release" (
-  $(Obfuscar) "$(TargetDir)obfuscar.xml"
-)
-
-DEL /S "$(TargetDir)*.xml"
+    <PostBuildEvent>DEL /S "$(TargetDir)*.xml"
 DEL /S "$(TargetDir)*.pdb"
 DEL /S "$(TargetDir)*.ilk"
 DEL /S "$(TargetDir)*.lib"
@@ -98,25 +87,9 @@ DEL /S "$(TargetDir)*.cer"
 DEL /S "$(TargetDir)*.exp"
 DEL /S "$(TargetDir)*.sys"
 
-if "$(ConfigurationName)" == "Release" (
-  DEL /S "$(TargetDir)Obfuscated\Mapping.txt"
-
-  XCOPY /Y /C /E "$(TargetDir)Obfuscated\*" "$(TargetDir)"
-  RMDIR /S /Q "$(TargetDir)Obfuscated\"
-)
-
 XCOPY /Y /C /E "$(SolutionDir)Driver.Kernel1\$(OutDir)*" "$(TargetDir)"
 RENAME "$(TargetDir)Driver.Kernel1.sys" "DriverExample1.sys"
 XCOPY /Y /C /E "$(SolutionDir)Driver.Kernel2\$(OutDir)*" "$(TargetDir)"
 RENAME "$(TargetDir)Driver.Kernel2.sys" "DriverExample2.sys"</PostBuildEvent>
   </PropertyGroup>
-  <Import Project="..\packages\Fody.3.3.2\build\Fody.targets" Condition="Exists('..\packages\Fody.3.3.2\build\Fody.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>Ce projet fait référence à des packages NuGet qui sont manquants sur cet ordinateur. Utilisez l'option de restauration des packages NuGet pour les télécharger. Pour plus d'informations, consultez http://go.microsoft.com/fwlink/?LinkID=322105. Le fichier manquant est : {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Fody.3.3.2\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.3.3.2\build\Fody.targets'))" />
-    <Error Condition="!Exists('..\packages\Costura.Fody.3.2.0\build\Costura.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Costura.Fody.3.2.0\build\Costura.Fody.props'))" />
-    <Error Condition="!Exists('..\packages\Obfuscar.2.2.14\build\obfuscar.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Obfuscar.2.2.14\build\obfuscar.props'))" />
-  </Target>
 </Project>
