--- a/Driver/Driver.csproj
+++ b/Driver/Driver.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Obfuscar.2.2.14\build\obfuscar.props" Condition="Exists('..\packages\Obfuscar.2.2.14\build\obfuscar.props')" />
+  <Import Project="..\packages\Obfuscar.2.2.15\build\obfuscar.props" Condition="Exists('..\packages\Obfuscar.2.2.15\build\obfuscar.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -41,15 +41,15 @@
     <Reference Include="System.ServiceProcess" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\AccessMask.cs" />
-    <Compile Include="Enums\DriverLoad.cs" />
-    <Compile Include="Enums\NtStatus.cs" />
-    <Compile Include="Enums\Services\SCMAccess.cs" />
-    <Compile Include="Enums\Services\ServiceAccess.cs" />
-    <Compile Include="Enums\Services\ServiceError.cs" />
-    <Compile Include="Enums\Services\ServiceStart.cs" />
-    <Compile Include="Enums\Services\ServiceType.cs" />
+    <Compile Include="Logic\Enums\DriverLoad.cs" />
+    <Compile Include="Logic\Enums\IoMethod.cs" />
+    <Compile Include="Native\Enums\Services\SCMAccess.cs" />
+    <Compile Include="Native\Enums\Services\ServiceAccess.cs" />
+    <Compile Include="Native\Enums\Services\ServiceError.cs" />
+    <Compile Include="Native\Enums\Services\ServiceStart.cs" />
+    <Compile Include="Native\Enums\Services\ServiceType.cs" />
     <Compile Include="Log.cs" />
+    <Compile Include="Logic\DriverIoShared.cs" />
     <Compile Include="Logic\DriverIo.cs" />
     <Compile Include="Logic\DriverStatic.cs" />
     <Compile Include="Logic\Driver.cs" />
@@ -61,6 +61,17 @@
     <Compile Include="Logic\Loaders\ServiceLoad.cs" />
     <Compile Include="Logic\Loaders\CapcomLoad.cs" />
     <Compile Include="Logic\Loaders\TurlaLoad.cs" />
+    <Compile Include="Native\Enums\AccessMask.cs" />
+    <Compile Include="Native\Enums\EventType.cs" />
+    <Compile Include="Native\Enums\Memory\MemoryPagePermissions.cs" />
+    <Compile Include="Native\Enums\Memory\MemoryPageState.cs" />
+    <Compile Include="Native\Enums\Memory\MemoryPageType.cs" />
+    <Compile Include="Native\Enums\NtStatus.cs" />
+    <Compile Include="Native\Enums\ProcessorArchitecture.cs" />
+    <Compile Include="Native\Enums\SectionInherit.cs" />
+    <Compile Include="Native\MemoryBasicInformation.cs" />
+    <Compile Include="Native\ObjectAttributes.cs" />
+    <Compile Include="Native\UnicodeString.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\DSEFix.cs" />
     <Compile Include="Utilities\Native.cs" />
@@ -75,6 +86,7 @@
   <ItemGroup>
     <None Include="obfuscar.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -112,6 +124,6 @@ cd "$(TargetDir)"
     <PropertyGroup>
       <ErrorText>Ce projet fait référence à des packages NuGet qui sont manquants sur cet ordinateur. Utilisez l'option de restauration des packages NuGet pour les télécharger. Pour plus d'informations, consultez http://go.microsoft.com/fwlink/?LinkID=322105. Le fichier manquant est : {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Obfuscar.2.2.14\build\obfuscar.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Obfuscar.2.2.14\build\obfuscar.props'))" />
+    <Error Condition="!Exists('..\packages\Obfuscar.2.2.15\build\obfuscar.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Obfuscar.2.2.15\build\obfuscar.props'))" />
   </Target>
 </Project>
