--- a/Driver/Driver.csproj
+++ b/Driver/Driver.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Native\MemoryBasicInformation.cs" />
     <Compile Include="Native\ObjectAttributes.cs" />
     <Compile Include="Native\UnicodeString.cs" />
+    <Compile Include="Native\WinApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\DSEFix.cs" />
     <Compile Include="Utilities\Native.cs" />
