--- a/Driver.NET/Driver.NET.csproj
+++ b/Driver.NET/Driver.NET.csproj
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Obfuscar.2.2.26\build\obfuscar.props" Condition="Exists('..\packages\Obfuscar.2.2.26\build\obfuscar.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -41,29 +40,23 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.ServiceProcess" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Driver.cs" />
-    <Compile Include="DriverConfig.cs" />
-    <Compile Include="DriverStatic.cs" />
-    <Compile Include="Interfaces\IDriver.cs" />
-    <Compile Include="Interfaces\IDriverIo.cs" />
-    <Compile Include="Interfaces\IDriverLoader.cs" />
-    <Compile Include="IO\DriverIo.cs" />
-    <Compile Include="Loaders\KernelServiceLoader.cs" />
+    <Compile Include="Device\DeviceIoControl.cs" />
+    <Compile Include="Device\DeviceIoControlApi.cs" />
+    <Compile Include="Device\DeviceIoControlMethods.cs" />
+    <Compile Include="Device\DeviceIoControlStatics.cs" />
+    <Compile Include="IDeviceIo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\WinApi.cs" />
+    <Compile Include="Services\WindowsServiceKernel.cs" />
+    <Compile Include="Services\WindowsServiceRegistry.cs" />
+    <Compile Include="Services\WindowsServiceApi.cs" />
+    <Compile Include="Services\WindowsServiceStatics.cs" />
+    <Compile Include="Services\WindowsService.cs" />
+    <Compile Include="Windows\WinApi.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Driver.NET.nuspec" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="obfuscar.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -76,11 +69,7 @@ DEL /S "$(TargetDir)*.cer"
 DEL /S "$(TargetDir)*.exp"</PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>if "$(ConfigurationName)" == "Release" (
-  REM $(Obfuscar) "$(TargetDir)obfuscar.xml"
-)
-
-DEL /S "$(TargetDir)*.xml"
+    <PostBuildEvent>DEL /S "$(TargetDir)*.xml"
 DEL /S "$(TargetDir)*.pdb"
 DEL /S "$(TargetDir)*.ilk"
 DEL /S "$(TargetDir)*.lib"
@@ -88,22 +77,9 @@ DEL /S "$(TargetDir)*.cer"
 DEL /S "$(TargetDir)*.exp"
 
 if "$(ConfigurationName)" == "Release" (
-  DEL /S "$(TargetDir)Obfuscated\Mapping.txt"
-
-  XCOPY /Y /C /E "$(TargetDir)Obfuscated\*" "$(TargetDir)"
-  RMDIR /S /Q "$(TargetDir)Obfuscated\"
-)
-
-if "$(ConfigurationName)" == "Release" (
   cd "$(TargetDir)"
   "nuget.exe" pack "$(ProjectPath)" -Prop Configuration=$(ConfigurationName)
 )
 </PostBuildEvent>
   </PropertyGroup>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Obfuscar.2.2.26\build\obfuscar.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Obfuscar.2.2.26\build\obfuscar.props'))" />
-  </Target>
 </Project>
