--- a/Driver.NET/Driver.NET.nuspec
+++ b/Driver.NET/Driver.NET.nuspec
@@ -2,14 +2,14 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>2.2.0.0</version>
+    <version>2.2.1.0</version>
     <title>Driver.NET</title>
     <authors>Berkan YILDIZ</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/BerkanYildiz/Driver.NET</projectUrl>
     <description>Powerful, simple and lightweight library used to create services and load/communicate with kernel drivers on Windows.</description>
-    <releaseNotes>Downgrade from .NET 5.0 to .NET Framework 4.8</releaseNotes>
+    <releaseNotes>Restore .NET 5</releaseNotes>
     <copyright>$copyright$</copyright>
     <tags>Windows Kernel Driver Library Service KMDF WDM WDF Device IRP IOCTL DeviceIoControl NtDeviceIoControl</tags>
   </metadata>
